1. fixed: wrong printing in game engine 2. fixed: blocks can enter home straight but brakes it before that as need dice value cant take a block to home in one go (6/block pieces < home straight length) 3. fixed: mystery tp can capture oppenent or added as a block 4. fixed: all pieces in block get capture point 5. after block movement, same normal state pieces can form a block 6. restore direction for remaining piece when block dissolves 7. fixed: block taking opponent blocks in home straight can block normal path cells.